@@ -117,7 +117,8 @@ in this Software without prior written authorization from The Open Group.
 # define _X_DEPRECATED
 #endif
 
-#if defined(__GNUC__) && ((__GNUC__ * 100 + __GNUC_MINOR__) >= 205)
+#if (defined(__GNUC__) && ((__GNUC__ * 100 + __GNUC_MINOR__) >= 205)) \
+	|| (defined(__SUNPRO_C) && (__SUNPRO_C >= 0x590))
 # define _X_NORETURN __attribute((noreturn))
 #else
 # define _X_NORETURN
